[tool.poetry]
name = "translation_service"
version = "0.1.0"
description = ""
authors = ["Nail Ishmuratov <nail.ez@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.54.0"}
uvicorn = "^0.29.0"
redis = "5.0.4"
#deep-translator = "^1.11.4"
#langdetect = "^1.0.9"
googletrans = "^4.0.0-rc1"
httpx = {extras = ["http2"], version = "^0.13.0"}
#google-cloud-translate = "^3.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
